# swagger.yaml
@@ -19,6 +19,13 @@ paths:
       operationId: getDemographicData
       requestBody: { content: { application/json: { schema: { $ref: '#/components/schemas/DemographicDataRequestQueryFilter' } } } }
       responses: { '200': { description: 'Successfully retrieved and grouped demographic data', content: { application/json: { schema: { type: object, properties: { result: { type: object, additionalProperties: { type: object }, description: 'The grouped demographic data' }, keys: { type: array, items: { type: string }, description: 'The keys used for grouping the data' }, total: { type: integer, description: 'The total number of records found' } } } } } }, '404': { description: 'No data found for the specified parameters or no groupBy specified' } }
+  /employment:
+    post:
+      summary: 'Filter and group employment data'
+      description: 'Filters the employment data based on various parameters and groups the data if specified.'
+      operationId: filterAndGroupEmploymentData
+      requestBody: { required: true, content: { application/json: { schema: { $ref: '#/components/schemas/EmploymentDataRequest' } } } }
+      responses: { '200': { description: 'Successful response with filtered (and possibly grouped) data.', content: { application/json: { schema: { type: object, properties: { keys: { type: array, items: { type: string } }, result: { type: object, description: 'Grouped data.' }, total: { type: integer, description: 'Total number of records.' } } } } } }, '400': { description: 'Bad request due to invalid parameters.', content: { application/json: { schema: { type: object, properties: { error: { type: string } } } } } }, '404': { description: 'No data found for the specified parameters.', content: { application/json: { schema: { type: object, properties: { error: { type: string, example: 'No data found for the specified parameters' } } } } } } }
   /income:
     post:
       summary: 'Retrieve grouped income data based on filters and grouping parameters'
@@ -60,6 +67,9 @@ components:
     DemographicDataRequestQueryFilter:
       type: object
       properties: { startYear: { type: integer, description: 'The starting year for filtering data', example: 2000 }, endYear: { type: integer, description: 'The ending year for filtering data', example: 2020 }, year: { type: integer, description: 'A specific year for filtering data', example: 2010 }, sex: { type: string, enum: [ M, F ], description: 'The gender for filtering data', example: M }, minAge: { type: integer, description: 'The minimum age for filtering data', example: 18, minimum: 0, maximum: 120 }, maxAge: { type: integer, description: 'The maximum age for filtering data', example: 65, minimum: 0, maximum: 120 }, age: { type: integer, description: 'The specific age for filtering data', example: 30, minimum: 0, maximum: 120 }, kreis: { type: integer, description: 'The district for filtering data', example: 1, minimum: 1, maximum: 12 }, quar: { type: string, description: 'The neighborhood for filtering data', example: Altstadt }, herkunft: { type: string, enum: [ 'Schweizer*in', 'Ausländer*in' ], description: 'The origin for filtering data', example: 'Schweizer*in' }, population: { type: integer, description: 'The population size for filtering data', example: 10000 }, minPopulation: { type: integer, description: 'The minimum population size for filtering data', example: 5000 }, maxPopulation: { type: integer, description: 'The maximum population size for filtering data', example: 20000 }, groupBy: { type: array, items: { type: string }, description: 'Fields to group the results by', example: [ year, sex ], enum: [ sex, herkunft, year, kreis, quar, age, age5, age10, age20, population ] } }
+    EmploymentDataRequest:
+      type: object
+      properties: { startYear: { type: integer, description: 'The start year for filtering employment data.', example: 2000 }, endYear: { type: integer, description: 'The end year for filtering employment data.', example: 2020 }, year: { type: integer, description: 'The specific year for filtering employment data.', example: 2010 }, startQuartal: { type: integer, description: 'The start quarter for filtering employment data.', example: 1, minimum: 1, maximum: 4 }, endQuartal: { type: integer, description: 'The end quarter for filtering employment data.', example: 4, minimum: 1, maximum: 4 }, quartal: { type: integer, description: 'The specific quarter for filtering employment data.', example: 2, minimum: 1, maximum: 4 }, groupBy: { type: array, items: { type: string, enum: [ year, quarter, allEmployed, fullTime ] }, description: 'List of keys to group the data by.', example: [ year, quarter ] } }
     IncomeDataRequest:
       type: object
       properties: { startYear: { type: integer, description: 'Start year for the income data' }, endYear: { type: integer, description: 'End year for the income data' }, year: { type: integer, description: 'Specific year for the income data' }, quar: { type: string, description: 'Quarter for the income data' }, tarif: { type: string, description: 'Tax tariff' }, taxIncome_p50: { type: number, description: 'Median income' }, taxIncome_p25: { type: number, description: '25th percentile income' }, taxIncome_p75: { type: number, description: '75th percentile income' }, groupBy: { type: array, items: { type: string, enum: [ year, quar, tarif, taxIncome_p50, taxIncome_p25, taxIncome_p75 ] }, description: 'Group by criteria' } }
